syntax = "proto3";
package homelabd;

message Envelope {
  oneof msg {
    SystemInfoMessage system_info = 1;
    PrometheusDiscoveryMessage prometheus_discovery = 2;
    // Add more messages here...
  }
}

message SystemInfoMessage {
    string hostname = 1;
    int64 uptime = 2;
    repeated string ip = 3;
    string homelabd_version = 4;
}

message PrometheusExporter {
    string host = 1;
    string job = 2;
    uint32 port = 3;
}

message PrometheusDiscoveryMessage {
    repeated PrometheusExporter discovered_targets = 1;
}
